# prometheus-chess

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  Defs.h  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  MoveList.cpp  MoveList.h  PVTable.cpp  PVTable.h  PosKey.cpp  PosKey.h  assertions.cpp  defs.h  evaluation.cpp  evaluation.h  main.cpp  search.cpp  uci.cpp  uci.h  util.cpp  util.h
src/board/: bitboard.cpp  bitboard.h  board.cpp  board.h
src/hashing/: poskey.cpp  poskey.h  pvtable.cpp  pvtable.h
src/io/: uci.cpp
src/move/: move.cpp  move.h  movegen.cpp  movegen.h
src/search/: evaluation.cpp  search.cpp
src/util/: assertions.cpp  util.cpp
test/: battle.sh  config.sh.template  nps.py  performance-log.txt  perft.sh  perftsuite.epd  regression.sh
